[refactor]: 매칭 관련 클래스 최신 Java 기능 활용
- MatchingRepository의 메서드명 findByUserId → findAllByUserId로 변경
- MatchingService에서 Stream API의 Java 17 toList() 메서드 적용